# assets-admin

./: README.md  go.mod
dock/: .env copy  .gitignore  Cargo.toml  Rocket copy.toml
dock/src/: database.rs  env.rs  fairing.rs  interface.rs  main.rs  utils.rs
dock/src/database/: users.rs
dock/src/interface/: guard.rs  response.md  response.rs  users.rs
dock/static/: index.html
docs/: database.md  response.md
freighter/: README.md  package-lock.json  package.json
freighter/src/: App.css  App.jsx  App.tsx  main.jsx  main.tsx
freighter/src/components/Login/: index.jsx  index.tsx
freighter/src/components/body/: index.tsx
freighter/src/components/icons/: index.tsx
freighter/src/components/nav-bar/: index.tsx
freighter/src/pages/user/login/: index.css  index.tsx
hello-rs/: Cargo.toml
hello-rs/src/: main.rs
hello-rs/static/: index.html
