[package]
name = "dock"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
scrypt = "0.11.0"


[default]
address = "127.0.0.1"
port = 8080
workers = 16
