[package]
name = "dock"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "secrets"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
scrypt = "0.11.0"
serde = "1.0.215"
sha256 = "1.5.0"
serde_json = "1.0.133"


[default]
address = "127.0.0.1"
port = 8080
workers = 16
